--- a/pick2pay/pick2pay_privacy_he.html
+++ b/pick2pay/pick2pay_privacy_he.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="generation-date" content="28.12.2025 00:00:00">
 
-    <title>Privacy Policy</title>
+    <title>מדיניות פרטיות</title>
 
     <style>
         html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}body{background-color:#eee;font-family:-apple-system,"system-ui",Helvetica Neue,Helvetica,Arial,sans-serif;font-size:16px;line-height:1.5;margin:0}.content{max-width:600px;margin:20px auto;background-color:#fff;padding:20px;box-shadow:0 0 5px #0000001a}@media only screen and (max-width: 610px){.content{width:100%;margin-top:0;box-shadow:none}body{background-color:#fff}}h1{font-size:25px;margin-top:0}h2{font-size:18px;margin-top:0}a{color:#00f;text-decoration:none}a:hover{color:red}.center{text-align:center}img.appicon{display:block;margin:0 auto;width:150px;height:150px;border-radius:30px}img.qr{display:block;margin:0 auto;width:150px;height:150px;background-color:#fff;padding:5px;border-radius:15px}a.support{font-size:14px;color:#333}.login{text-align:center}.login input,.login button{height:30px}.menu{margin-bottom:20px;line-height:30px}.menu a{margin-right:10px}.logs .item{margin-top:20px}.logs .item .date{font-weight:700}.logs .item .text{word-break:break-all;margin-top:5px;line-height:1.5;font:12px Menlo,Monaco,Consolas,monospace;background-color:#18171b;color:#56db3a;padding:10px}form.converter input,form.converter select{margin-right:5px;margin-bottom:5px;height:25px;width:100px}table{display:block;overflow-x:auto;white-space:nowrap;border-collapse:collapse;margin-top:20px;text-align:center}table tr.header{font-weight:700;background:#b0e0e6}table td{padding:5px 10px;border:1px solid gray}table td.left{text-align:left}table td.gray{background-color:#f2f2f2}.counter{display:block}
@@ -19,39 +19,39 @@
 <body>
 
     <div class="content">
-        <h1>Privacy Policy (HE)</h1>
+        <h1>מדיניות פרטיות</h1>
 
-        <p>Last updated: December 28, 2025</p>
+        <p>עודכן לאחרונה: 28 בדצמבר 2025</p>
 
-        <p>This Privacy Policy explains how Pick2Pay (the “App”) handles information when you use it.</p>
+        <p>מדיניות פרטיות זו מסבירה כיצד Pick2Pay ("האפליקציה") מטפלת במידע בעת השימוש בה.</p>
 
-        <h2>Information You Provide</h2>
+        <h2>מידע שאתם מספקים</h2>
 
-        <p>The App is designed to work offline. Data you enter (such as PCS values, rates, goals, penalties, and shift selections) is stored locally on your device to provide the App’s functionality.</p>
+        <p>האפליקציה נועדה לעבוד במצב לא מקוון (אופליין). נתונים שאתם מזינים (כגון ערכי PCS, תעריפים, יעדים, קנסות ובחירת משמרות) נשמרים מקומית על המכשיר שלכם כדי לאפשר את פעילות האפליקציה.</p>
 
-        <h2>Information We Collect</h2>
+        <h2>מידע שאנו אוספים</h2>
 
-        <p>We do not require you to create an account. The App does not ask for your name, phone number, or other direct identifiers. We do not knowingly collect personal information through the App.</p>
+        <p>איננו דורשים יצירת חשבון. האפליקציה אינה מבקשת את שמכם, מספר הטלפון שלכם או פרטים מזהים אחרים. איננו אוספים ביודעין מידע אישי דרך האפליקציה.</p>
 
-        <h2>Third-Party Services</h2>
+        <h2>שירותי צד שלישי</h2>
 
-        <p>The App may rely on standard platform services (such as an app store or your device operating system) which may collect information under their own policies. We do not control those services.</p>
+        <p>האפליקציה עשויה להסתמך על שירותי פלטפורמה סטנדרטיים (כגון חנות אפליקציות או מערכת ההפעלה של המכשיר), אשר עשויים לאסוף מידע תחת המדיניות שלהם. אין לנו שליטה על שירותים אלו.</p>
 
-        <h2>Data Sharing</h2>
+        <h2>שיתוף נתונים</h2>
 
-        <p>We do not sell your information. We do not share the data you enter in the App with third parties because it is stored locally on your device.</p>
+        <p>איננו מוכרים את המידע שלכם. איננו משתפים את הנתונים שאתם מזינים באפליקציה עם צדדים שלישיים מכיוון שהם נשמרים מקומית במכשירכם.</p>
 
-        <h2>Security</h2>
+        <h2>אבטחה</h2>
 
-        <p>We take reasonable measures to protect the App. However, no method of electronic storage is 100% secure, and you are responsible for securing access to your device.</p>
+        <p>אנו נוקטים באמצעים סבירים להגנה על האפליקציה. עם זאת, אף שיטה של אחסון אלקטרוני אינה מאובטחת ב-100%, ואתם אחראים לאבטחת הגישה למכשיר שלכם.</p>
 
-        <h2>Changes to This Privacy Policy</h2>
+        <h2>שינויים במדיניות הפרטיות</h2>
 
-        <p>We may update this Privacy Policy from time to time. Changes become effective when posted on this page.</p>
+        <p>אנו עשויים לעדכן את מדיניות הפרטיות מעת לעת. השינויים ייכנסו לתוקף עם פרסומם בדף זה.</p>
 
-        <h2>Contact</h2>
+        <h2>יצירת קשר</h2>
 
-        <p>If you have questions about this Privacy Policy, contact us at <a href="mailto:cpt.blak@gmail.com">cpt.blak@gmail.com</a>.</p>
+        <p>אם יש לכם שאלות לגבי מדיניות פרטיות זו, צרו איתנו קשר בכתובת: <a href="mailto:cpt.blak@gmail.com">cpt.blak@gmail.com</a>.</p>
 
     </div>
 
