--- a/pick2pay/pick2pay_terms_he.html
+++ b/pick2pay/pick2pay_terms_he.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="generation-date" content="28.12.2025 00:00:00">
 
-    <title>Terms of Use</title>
+    <title>תנאי שימוש</title>
 
     <style>
         html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}body{background-color:#eee;font-family:-apple-system,"system-ui",Helvetica Neue,Helvetica,Arial,sans-serif;font-size:16px;line-height:1.5;margin:0}.content{max-width:600px;margin:20px auto;background-color:#fff;padding:20px;box-shadow:0 0 5px #0000001a}@media only screen and (max-width: 610px){.content{width:100%;margin-top:0;box-shadow:none}body{background-color:#fff}}h1{font-size:25px;margin-top:0}h2{font-size:18px;margin-top:0}a{color:#00f;text-decoration:none}a:hover{color:red}.center{text-align:center}img.appicon{display:block;margin:0 auto;width:150px;height:150px;border-radius:30px}img.qr{display:block;margin:0 auto;width:150px;height:150px;background-color:#fff;padding:5px;border-radius:15px}a.support{font-size:14px;color:#333}.login{text-align:center}.login input,.login button{height:30px}.menu{margin-bottom:20px;line-height:30px}.menu a{margin-right:10px}.logs .item{margin-top:20px}.logs .item .date{font-weight:700}.logs .item .text{word-break:break-all;margin-top:5px;line-height:1.5;font:12px Menlo,Monaco,Consolas,monospace;background-color:#18171b;color:#56db3a;padding:10px}form.converter input,form.converter select{margin-right:5px;margin-bottom:5px;height:25px;width:100px}table{display:block;overflow-x:auto;white-space:nowrap;border-collapse:collapse;margin-top:20px;text-align:center}table tr.header{font-weight:700;background:#b0e0e6}table td{padding:5px 10px;border:1px solid gray}table td.left{text-align:left}table td.gray{background-color:#f2f2f2}.counter{display:block}
@@ -19,43 +19,43 @@
 <body>
 
     <div class="content">
-        <h1>Terms of Use (HE)</h1>
+        <h1>תנאי שימוש</h1>
 
-        <p>Last updated: December 28, 2025</p>
+        <p>עודכן לאחרונה: 28 בדצמבר 2025</p>
 
-        <p>These Terms of Use (“Terms”) govern your use of the Pick2Pay mobile application (the “App”). By downloading or using the App, you agree to these Terms. If you do not agree, do not use the App.</p>
+        <p>תנאי שימוש אלה ("התנאים") מסדירים את השימוש שלכם באפליקציית Pick2Pay ("האפליקציה"). על ידי הורדה או שימוש באפליקציה, אתם מסכימים לתנאים אלו. אם אינכם מסכימים, אל תשתמשו באפליקציה.</p>
 
-        <h2>About the App</h2>
+        <h2>אודות האפליקציה</h2>
 
-        <p>Pick2Pay helps you track your daily PCS, estimate earnings, and monitor progress toward monthly goals. The App is intended for personal use.</p>
+        <p>Pick2Pay עוזרת לכם לעקוב אחר ה-PCS היומי, להעריך הכנסות ולנטר התקדמות לעבר יעדים חודשיים. האפליקציה מיועדת לשימוש אישי.</p>
 
-        <h2>Your Data</h2>
+        <h2>הנתונים שלכם</h2>
 
-        <p>Information you enter in the App (such as PCS values, rates, goals, penalties, and shift selections) is stored locally on your device so the App can function. You are responsible for the accuracy of the information you enter and for maintaining access to your device.</p>
+        <p>מידע שאתם מזינים באפליקציה (כגון ערכי PCS, תעריפים, יעדים, קנסות ובחירת משמרות) נשמר מקומית במכשירכם לצורך תפקוד האפליקציה. אתם אחראים לדיוק המידע שאתם מזינים ולשמירה על הגישה למכשירכם.</p>
 
-        <h2>Payments</h2>
+        <h2>תשלומים</h2>
 
-        <p>The App does not currently include subscriptions or in-app purchases.</p>
+        <p>נכון לעכשיו, האפליקציה אינה כוללת מנויים או רכישות בתוך האפליקציה.</p>
 
-        <h2>Prohibited Use</h2>
+        <h2>שימוש אסור</h2>
 
-        <p>You agree not to use the App in any unlawful manner, to attempt to interfere with the App’s operation, or to reverse engineer or misuse the App except to the extent permitted by applicable law.</p>
+        <p>אתם מסכימים לא להשתמש באפליקציה בכל אופן בלתי חוקי, לא לנסות להפריע לפעולת האפליקציה, ולא לבצע הנדסה לאחור (reverse engineer) או לעשות שימוש לרעה באפליקציה, למעט במידה המותרת על פי החוק.</p>
 
-        <h2>Disclaimer</h2>
+        <h2>הצהרת הגבלת אחריות</h2>
 
-        <p>The App is provided “as is” and “as available”. We make no warranties of any kind, express or implied, regarding the App, including fitness for a particular purpose, accuracy of calculations, or uninterrupted availability.</p>
+        <p>האפליקציה מסופקת כפי שהיא ("AS IS") ועל בסיס זמינות ("AS AVAILABLE"). איננו נותנים אחריות מכל סוג שהוא, מפורשת או משתמעת, לגבי האפליקציה, כולל התאמה למטרה מסוימת, דיוק החישובים או זמינות רציפה.</p>
 
-        <h2>Limitation of Liability</h2>
+        <h2>הגבלת אחריות</h2>
 
-        <p>To the maximum extent permitted by law, we will not be liable for any indirect, incidental, special, consequential, or punitive damages, or any loss of profits, data, or goodwill, arising from or related to your use of the App.</p>
+        <p>במידה המקסימלית המותרת על פי חוק, לא נהיה אחראים לכל נזק עקיף, מקרי, מיוחד או תוצאתי, או לכל אובדן רווחים, נתונים או מוניטין, הנובעים מהשימוש שלכם באפליקציה.</p>
 
-        <h2>Changes to These Terms</h2>
+        <h2>שינויים בתנאים אלו</h2>
 
-        <p>We may update these Terms from time to time. Changes become effective when posted on this page. Your continued use of the App after changes are posted means you accept the updated Terms.</p>
+        <p>אנו עשויים לעדכן תנאים אלו מעת לעת. השינויים ייכנסו לתוקף עם פרסומם בדף זה. המשך השימוש שלכם באפליקציה לאחר פרסום השינויים מהווה הסכמה לתנאים המעודכנים.</p>
 
-        <h2>Contact</h2>
+        <h2>יצירת קשר</h2>
 
-        <p>If you have questions about these Terms, contact us at <a href="mailto:cpt.blak@gmail.com">cpt.blak@gmail.com</a>.</p>
+        <p>אם יש לכם שאלות לגבי תנאים אלו, צרו איתנו קשר בכתובת: <a href="mailto:cpt.blak@gmail.com">cpt.blak@gmail.com</a>.</p>
 
     </div>
 
