--- a/pick2pay/pick2pay_terms_he.html
+++ b/pick2pay/pick2pay_terms_he.html
@@ -39,11 +39,11 @@
 
         <h2>שימוש אסור</h2>
 
-        <p>אתם מסכימים לא להשתמש באפליקציה בכל אופן בלתי חוקי, לא לנסות להפריע לפעולת האפליקציה, ולא לבצע הנדסה לאחור (reverse engineer) או לעשות שימוש לרעה באפליקציה, למעט במידה המותרת על פי החוק.</p>
+        <p>אתם מסכימים לא להשתמש באפליקציה בכל אופן בלתי חוקי, לא לנסות להפריע לפעולת האפליקציה, ולא לבצע הנדסה לאחור (הנדסה לאחור) או לעשות שימוש לרעה באפליקציה, למעט במידה המותרת על פי החוק.</p>
 
         <h2>הצהרת הגבלת אחריות</h2>
 
-        <p>האפליקציה מסופקת כפי שהיא ("AS IS") ועל בסיס זמינות ("AS AVAILABLE"). איננו נותנים אחריות מכל סוג שהוא, מפורשת או משתמעת, לגבי האפליקציה, כולל התאמה למטרה מסוימת, דיוק החישובים או זמינות רציפה.</p>
+        <p>האפליקציה" מסופקת "כפי שהיא" ועל בסיס זמינות. איננו נותנים אחריות מכל סוג שהוא, מפורשת או משתמעת, לגבי האפליקציה, כולל התאמה למטרה מסוימת, דיוק החישובים או זמינות רציפה".</p>
 
         <h2>הגבלת אחריות</h2>
 
