--- a/pick2pay/pick2pay_terms_he.html
+++ b/pick2pay/pick2pay_terms_he.html
@@ -43,7 +43,7 @@
 
         <h2>הצהרת הגבלת אחריות</h2>
 
-        <p>האפליקציה" מסופקת "כפי שהיא" ועל בסיס זמינות. איננו נותנים אחריות מכל סוג שהוא, מפורשת או משתמעת, לגבי האפליקציה, כולל התאמה למטרה מסוימת, דיוק החישובים או זמינות רציפה".</p>
+        <p>האפליקציה מסופקת "כפי שהיא" ועל "בסיס זמינות". איננו נותנים אחריות מכל סוג שהוא, מפורשת או משתמעת, לגבי האפליקציה, כולל התאמה למטרה מסוימת, דיוק החישובים או זמינות רציפה.</p>
 
         <h2>הגבלת אחריות</h2>
 
